# dragon-curve

./: .bumpversion.cfg  .gitignore  Pipfile  README.md  dragon.py  dragon.sh  dragon_curve.py  dragon_curve2.py  install.sh  pyproject.toml  rdragon.sh  rdragon_curve.py  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: build_and_test.yml  bump_version.yml
dragon_curve/: __init__.py  dragon.py  dragon_curve.py  dragon_curve2.py
examples/: dragon.sh
scripts/: lint.sh  test.sh  yapf.sh
src/: dragon.py  dragon_curve.py
tests/: test_dragon_curve.py
