[project]
name = "dragon-curve"
version = "1.0.0"
description = "A dragon curve algorithm in SVG"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["algorithm", "fractal", "dragon", "dragon curve"]
authors = [
    { name = "Pedro Mayorga, PhD", email = "ppmayorga80@gmail.com" }
]
maintainers = [
    { name = "Pedro Mayorga, PhD", email = "ppmayorga80@gmail.com" }
]


[project.scripts]
dragon = "dragon_curve.dragon:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
#package-data = {"sample" = ["*.dat"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
